--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -250,5 +250,5 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-            name: ${{ inputs.project }}-${{ steps.os-specific-values.outputs.os }}-dist
+            name: ${{ inputs.project }}-${{ steps.os-specific-values.outputs.os }}-${{ inputs.python-version }}-dist
             path: ${{ steps.artifact-path.outputs.path }}
