use pyinstaller 6.10+ for python 3.13 (5.3 through 6.3 arent available)

--- a/pyinstaller/requirements.txt
+++ b/pyinstaller/requirements.txt
@@ -1,3 +1,6 @@
 importlib_resources
 python-dotenv
-pyinstaller>=5.3,<=6.3
+# For Python < 3.13
+pyinstaller>=5.3,<=6.3; python_version < "3.13"
+# For Python >= 3.13
+pyinstaller>=6.10; python_version >= "3.13"
