use main for default test of watertap

--- a/.github/workflows/test-electron-build.yml
+++ b/.github/workflows/test-electron-build.yml
@@ -13,7 +13,7 @@ jobs:
             python-version: [3.12, 3.13]
             include: 
                 - project: watertap
-                  pip-install-target: watertap@git+https://github.com/watertap-org/watertap@1.2.0rc0
+                  pip-install-target: watertap@git+https://github.com/watertap-org/watertap@main
                   artifact-name: WaterTAP-Flowsheet-Processor
                 - project: prommis
                   pip-install-target: prommis@git+https://github.com/prommis/prommis@0.6.0rc0
