--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -202,16 +202,19 @@ jobs:
       - name: DEBUG - pip freeze
         run: pip freeze
 
-      # - name: Install numpy 2.2.6
-      #   run: pip install numpy==2.2.6
+      - name: Install numpy 2.2.6
+        run: pip install numpy==2.2.6
 
-      # - name: Install scipy 1.15.3
-      #   run: pip install scipy==1.15.3
+      - name: Install scipy 1.15.3
+        run: pip install scipy==1.15.3
 
       - name: Transfer Entry points
         working-directory: ./scripts
         run: |
           python move_entrypoints.py -p ${{ inputs.project }}
+
+      - name: DEBUG - pip freeze
+        run: pip freeze
 
       - name: Build Backend
         working-directory: ./pyinstaller
