--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -65,16 +65,10 @@ jobs:
     runs-on: ${{ inputs.os-version }}
     steps:
       - uses: actions/checkout@v4
-      # - uses: conda-incubator/setup-miniconda@v3
-      #   with:
-      #     environment-file: environment.yml
-      #     python-version: ${{ inputs.python-version }}
-      #     activate-environment: ifp-build-env
-      #     miniforge-version: latest
       - uses: conda-incubator/setup-miniconda@v3
         with:
           python-version: ${{ inputs.python-version }}
-          miniforge-version: latest
+          miniforge-version: 24.3.0
           activate-environment: ifp-build-env
           channels: conda-forge,nodefaults
 
