--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -68,7 +68,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v3
         with:
           python-version: ${{ inputs.python-version }}
-          miniforge-version: 24.3.0
+          miniforge-version: 25.3.1-0
           activate-environment: ifp-build-env
           channels: conda-forge,nodefaults
 
